# hf-discover

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  agentfinder.toml  hf-discover.toml  pyproject.toml  release-please-config.json  typesafe.md
.github/workflows/: ci.yml  prepare-release.yml  release-please.yml  release.yml  update-release-lockfile.yml
deploy/huggingface-space/: .dockerignore  Dockerfile  README.md  start-agentfinder.sh  start-discover.sh
docs/: file-tools-eval-report.html  repository-overview.html  skills-search-design-deployment-options.html
plan/: skills-search.md
scripts/: bump-version.py  check-release.sh  configure-space-runtime.py  smoke-local-registries.sh  vendor-meilisearch.py
spec/: agentfinder.md  ard.md  hf-search.md
spec/ai-catalog/: SOURCE.md  ai-catalog.md
src/agentfinder/: __init__.py  challenge.py  cli.py  hf_skills.py  hf_spaces.py  models.py  server.py
src/discover/: __init__.py  challenge.py  cli.py  filters.py  hf_search.py  hf_skills.py  hf_spaces.py  models.py  navigation.py  server.py
tests/: test_challenge.py  test_cli.py  test_hf_spaces.py  test_mcp.py  test_models.py  test_navigation.py
